feat: refactor code , add pagination and mutation update post

--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "yarn run relay && react-scripts start",
+    "build": "yarn run relay && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "relay": "relay-compiler --src ./src --schema schema.graphql --language typescript --artifactDirectory ./src/__generated__"
+    "relay": "yarn run relay-compiler --src ./src --schema schema.graphql --language typescript"
   },
   "eslintConfig": {
     "extends": [
