feat: refactor post component and add appbar

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.0",
     "@mui/styles": "^5.0.0",
     "@testing-library/jest-dom": "^5.11.4",
@@ -15,10 +16,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-relay": "^11.0.2",
+    "@types/react-router-dom": "^5.3.0",
     "@types/relay-runtime": "^12.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-relay": "^12.0.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "relay-compiler-language-typescript": "^14.1.0",
     "relay-runtime": "^12.0.0",
