--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/relay-runtime": "^12.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "7.7.1",
     "react-relay": "^12.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
