--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-graphql",
+  "name": "demo-relay",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,8 +30,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "yarn run relay && react-scripts start",
-    "build": "yarn run relay && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "relay": "yarn run relay-compiler --src ./src --schema schema.graphql --language typescript"
